<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_60"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/dimen_280"
        android:layout_height="@dimen/dimen_60"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ul_user"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="@dimen/dimen_30"
            android:text="@string/user"
            android:textColor="@color/lime"
            android:gravity="center"
            android:textSize="@dimen/textSize26"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="@dimen/dimen_180"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/layout_marginTop5">
            <TextView
                android:id="@+id/ul_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop5"
                android:layout_marginLeft="@dimen/layout_marginLeft5"
                android:textColor="@color/black"
                android:text="@string/acconut"/>
            <TextView
                android:id="@+id/ul_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop5"
                android:layout_marginLeft="@dimen/layout_marginLeft5"
                android:text="@string/pass"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/ul_bt"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_60"
        android:textColor="@color/red"
        android:layout_marginLeft="@dimen/layout_marginLeft10"
        android:text="@string/delete"/>
</LinearLayout>