<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/layout_marginLeft30"
        android:layout_marginRight="@dimen/layout_marginRight20"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/dimen_30"
        android:textColor="@color/red"/>
    <TextView
        android:id="@+id/infouser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_30"
        android:textColor="@color/green"
        android:layout_marginLeft="@dimen/layout_marginLeft10"
        android:text="user"/>
    </LinearLayout>
    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop30"
        android:text="@string/change"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop30"
        android:text="@string/logout"/>
</LinearLayout>